--- a/demo/mc.tex
+++ b/demo/mc.tex
@@ -1,7 +1,7 @@
 \usetikzlibrary{automata}
 \tikzstyle{mcstate} = [state, fill=gray!20!white]
 
-\begin{tikzpicture}[draw=Green, very thick, >=latex, every loop, auto=right]
+\begin{tikzpicture}[draw=Green, very thick, >=latex', auto=right]
     \node [mcstate]                 (s4) {4};
     \node [mcstate, right=of s4]    (s1) {1};
     \node [mcstate, below=of s4]    (s2) {2};
@@ -9,7 +9,7 @@
     \node [mcstate, right=of s1]    (s5) {5};
     \node [mcstate, above=of s1]    (s3) {3};
     
-    \draw
+    \draw [->]
         (s4) edge [loop left] node {1/3} (s4)
         (s4) edge [above]     node {1/3} (s1)
         (s4) edge             node {1/3} (s2)
