--- a/demo/proc.tex
+++ b/demo/proc.tex
@@ -19,8 +19,8 @@
     \path [line] (ambig.east) -| node {no} (stop);
     \path [line] (ambig) -- node {yes} (gen);
     \path [line] (gen) -- node [below] {ambiguous word \& \\ parse trees} (select);
-    \path [line, red, thick] (select) -- node {feedback} (synt);
-    \path [line] (synt) -- node [right] {add layout \\ \qquad restrictions} (grammar);
+    \path [line, red, thick] (select) -- node [right, pos=0.6] {feedback} (synt);
+    \path [line] (synt) -- node [right, pos=0.7] {add restrictions} (grammar);
     % Draw user rectangle
     \draw [red, thick, dashed, rounded corners]
         ($(select.south east)+(.25,-.25)$) rectangle ($(input.north west)+(-.25,.25)$);
