--- a/demo/scc.tex
+++ b/demo/scc.tex
@@ -1,13 +1,13 @@
 \tikzstyle{scc node} = [state, fill=gray!20!white]
 
-\begin{tikzpicture}[every loop, auto=left, very thick, >=latex, draw=Blue, fill=Blue]
+\begin{tikzpicture}[every loop, auto=left, very thick, >=latex', draw=Blue, fill=Blue]
     \begin{scope}[local bounding box=scc]
         \node [scc node, initial]        (s0) {$s_0$};
         \node [scc node, right=of s0]    (s1) {$s_1$};
         \draw
             (s0) edge [bend left] node {0.5} (s1)
             (s1) edge [bend left] node {0.5} (s0)
-            ;
+        ;
         \begin{pgfonlayer}{background}
             \path[fill=blue!20,draw=blue,dashed,thick,rounded corners]
                 (scc.south west) rectangle
