--- a/slide.tex
+++ b/slide.tex
@@ -1,6 +1,6 @@
 % !TEX program = xelatex
-% \documentclass[usenames,xcolor=svgnames,11pt,sans,handout]{beamer}
-\documentclass[usenames,xcolor=svgnames,11pt,sans]{beamer}
+\documentclass[usenames,xcolor=svgnames,11pt,sans,handout]{beamer}
+% \documentclass[usenames,xcolor=svgnames,11pt,sans]{beamer}
 \usetheme{Madrid}
 \colorlet{theme}{DarkGreen}
 \usecolortheme[named=theme]{structure}
@@ -216,7 +216,7 @@
     \lstinputlisting{demo/mutual.tex}
 
     \begin{center}
-        % \input{demo/mutual.tex}        
+        % \input{demo/mutual.tex}
     \end{center}
 \end{frame}
 
